Fixed bug #33710 (ArrayAccess objects doen't initialize $this)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@190969 c90b9560-bf6c-de11-be94-00142212c4b1